[3.February 2009]
- docs/user_manual/usermanual.xml, Makefile:
  I updated the User's manual (deleted sections about disabling Rubygems
  and libraries which are distributed as part of Ruby's standard library);
  also deleted unused images and updated one
- levels of campaigns 'Save Ruby' and 'Christmas 2008': exit moved
- initfv.rb: removed debugging output written yesterday to debug
  widget GameUI::Menus::ScrollingCredits

[2.February 2009]
- initfv.rb: ScrollingCredits widget used in the menu (yeah! unlimited space
  for new developers! :) )
- entities/bomb.rb: fall of a dropped bomb stops on a shield
- README.txt: added reference to User's manual; modified (more look than 
  content)

[1.February 2009]
- entities/tombstone.rb: removed funny useless state classes (in 2005 I was
  writing freeVikings and reading book about Design Patterns, but not 
  everywhere I was able to use them properly...), added nogath's animated
  tombstone graphic
- gfx/tombstone.png: spritesheet of animated tombstone
- config/config.rb, config/defaults.conf, freevikings.rb: 
  fixed documentation about entry 'frame delay' (option -d)
- topmenu.rb: menu placed a bit higher (for longer credits to fit on the 
  screen)

[31.January 2009]
- gfx/stone_firespitter.png: replaced by nogath's
- initfv.rb: Federico Borrone AKA nogath added to Credits
- gfx/brick_destroyed.tga: empty image removed
- bomb.rb: moved to entities/ (I must have forgotten to do so earlier)
- README -> README.txt, LICENSE -> LICENSE.txt,
  (because of users of Windows: README should be readable even for total
  Windows newbie and thus it should have a proper extension;
  LICENSE makes name-clash with directory licenses/ on Windows filesystems.)
- util/make_release.rb: changed README filename
- CREDITS, initfv.rb: credits aren't hard-coded in the code of menu,
  but loaded from file CREDITS

[30.January 2009]
- gfx/fireball.png: gfx/brick* : replaced by nogath's
- wall.rb: image filenames updated